Audio in apps which embed WebViews is corrupted. https://bugs.webkit.org/show_bug.cgi?id=118163

Reviewed by Maciej Stachowiak.

Source/WebCore:

Add a preference, which defaults to off, which controls whether the
AudioSessionManager will switch to a large audio buffer setting for
power-savings during <video> playback.

* WebCore.exp.in:
* page/Settings.cpp:
(WebCore::Settings::setLowPowerVideoAudioBufferSizeEnabled): Added.  Simple setter.
* page/Settings.h:
(WebCore::Settings::lowPowerVideoAudioBufferSizeEnabled): Added.  Simple getter.
* platform/audio/mac/AudioSessionManagerMac.cpp:
(AudioSessionManager::updateSessionState): Only set the large audio buffer
    size if lowPowerVideoAudioBufferSize is enabled.

Source/WebKit/mac:

Expose the WebCore lowPowerVideoAudioBufferSizeEnabled setting to WebKit clients.

* WebView/WebPreferenceKeysPrivate.h:
* WebView/WebPreferences.mm:
(+[WebPreferences initialize]):
(-[WebPreferences lowPowerVideoAudioBufferSizeEnabled]):
(-[WebPreferences setLowPowerVideoAudioBufferSizeEnabled:]):
* WebView/WebPreferencesPrivate.h:
* WebView/WebView.mm:
(-[WebView _preferencesChanged:]):

Source/WebKit2:

Expose the WebCore lowPowerVideoAudioBufferSizeEnabled setting to WebKit2 clients.

* Shared/WebPreferencesStore.h:
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences):

Canonical link: https://commits.webkit.org/136287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152234 268f45cc-cd09-0410-ab3c-d52691b4dbfc